--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
         {
-            "source": "./src/*.css",
+            "source": "./src/*.*",
             "destination": "./dist/index.html"
         }
     ]
