--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
         {
-            "source": "./src/*.css",
-            "destination": "./dist/index.html"
+            "source": "/(.*)",
+            "destination": "/dist/index.html"
         }
     ]
 }
